packages/compiler/tests/snapshots/ast_export__class_form_a_static.snap
---
source: tests/ast_export.rs
expression: json
---
{
  "tag": "Button",
  "astVersion": 1,
  "style": null,
  "template": [
    {
      "kind": "element",
      "tag": "button",
      "attrs": [
        {
          "kind": "static",
          "name": "class",
          "value": "btn primary"
        }
      ],
      "children": [
        {
          "kind": "text",
          "value": "Go"
        }
      ]
    }
  ],
  "meta": {
    "name": "Button"
  }
}
