packages/compiler/tests/snapshots/ast_export__class_form_b_binding.snap
---
source: tests/ast_export.rs
expression: json
---
{
  "tag": "Button",
  "astVersion": 1,
  "style": null,
  "template": [
    {
      "kind": "element",
      "tag": "button",
      "attrs": [
        {
          "kind": "binding",
          "name": "class",
          "expr": "variant"
        }
      ],
      "children": [
        {
          "kind": "text",
          "value": "Go"
        }
      ]
    }
  ],
  "meta": {
    "name": "Button"
  }
}
