packages/compiler/tests/snapshots/ast_export__class_form_c_macro.snap
---
source: tests/ast_export.rs
expression: json
---
{
  "tag": "Button",
  "astVersion": 1,
  "style": null,
  "template": [
    {
      "kind": "element",
      "tag": "button",
      "attrs": [
        {
          "kind": "macro",
          "name": "class:active",
          "value": {
            "form": "curly",
            "expr": "isActive"
          }
        }
      ],
      "children": [
        {
          "kind": "text",
          "value": "Go"
        }
      ]
    }
  ],
  "meta": {
    "name": "Button"
  }
}
