packages/compiler/tests/snapshots/ast_export__class_three_forms_combined.snap
---
source: tests/ast_export.rs
expression: json
---
{
  "tag": "Button",
  "astVersion": 1,
  "style": null,
  "template": [
    {
      "kind": "element",
      "tag": "button",
      "attrs": [
        {
          "kind": "binding",
          "name": "class",
          "expr": "cn('btn', variant)"
        },
        {
          "kind": "static",
          "name": "class",
          "value": "base"
        },
        {
          "kind": "macro",
          "name": "class:loading",
          "value": {
            "form": "curly",
            "expr": "busy"
          }
        }
      ],
      "children": [
        {
          "kind": "text",
          "value": "Go"
        }
      ]
    }
  ],
  "meta": {
    "name": "Button"
  }
}
