packages/compiler/tests/snapshots/ast_export__e10_component_vs_html_element_class.snap
---
source: tests/ast_export.rs
expression: json
---
{
  "tag": "Page",
  "astVersion": 1,
  "style": null,
  "template": [
    {
      "kind": "element",
      "tag": "UserCard",
      "attrs": [
        {
          "kind": "static",
          "name": "class",
          "value": "x"
        }
      ],
      "children": []
    }
  ],
  "meta": {
    "name": "Page"
  }
}
