packages/compiler/tests/snapshots/ast_export__e1_two_class_attrs_static_and_binding.snap
---
source: tests/ast_export.rs
expression: json
---
{
  "tag": "Card",
  "astVersion": 1,
  "style": null,
  "template": [
    {
      "kind": "element",
      "tag": "div",
      "attrs": [
        {
          "kind": "static",
          "name": "class",
          "value": "base"
        },
        {
          "kind": "binding",
          "name": "class",
          "expr": "x"
        }
      ],
      "children": []
    }
  ],
  "meta": {
    "name": "Card"
  }
}
