packages/compiler/tests/snapshots/ast_export__e2_array_class_binding.snap
---
source: tests/ast_export.rs
expression: json
---
{
  "tag": "Card",
  "astVersion": 1,
  "style": null,
  "template": [
    {
      "kind": "element",
      "tag": "div",
      "attrs": [
        {
          "kind": "binding",
          "name": "class",
          "expr": "['a', cond && 'b']"
        }
      ],
      "children": []
    }
  ],
  "meta": {
    "name": "Card"
  }
}
