packages/compiler/tests/snapshots/ast_export__e5_no_template_block.snap
---
source: tests/ast_export.rs
expression: json
---
{
  "tag": "Counter",
  "astVersion": 1,
  "style": null,
  "template": null,
  "meta": {
    "name": "Counter"
  }
}
