packages/compiler/tests/snapshots/ast_export__e6_global_style_block.snap
---
source: tests/ast_export.rs
expression: json
---
{
  "tag": "Layout",
  "astVersion": 1,
  "style": {
    "content": "body { margin: 0; }",
    "scope": "global"
  },
  "template": [
    {
      "kind": "element",
      "tag": "div",
      "attrs": [],
      "children": []
    }
  ],
  "meta": {
    "name": "Layout"
  }
}
