packages/compiler/tests/snapshots/ast_export__e6_scoped_style_block.snap
---
source: tests/ast_export.rs
expression: json
---
{
  "tag": "Layout",
  "astVersion": 1,
  "style": {
    "content": ":host { display: block; }",
    "scope": "scoped"
  },
  "template": [
    {
      "kind": "element",
      "tag": "div",
      "attrs": [],
      "children": []
    }
  ],
  "meta": {
    "name": "Layout"
  }
}
