packages/compiler/tests/snapshots/ast_export__meta_fields_emitted_for_meta_sfc.snap
---
source: tests/ast_export.rs
expression: json
---
{
  "tag": "Button",
  "astVersion": 1,
  "style": null,
  "template": [
    {
      "kind": "element",
      "tag": "button",
      "attrs": [],
      "children": [
        {
          "kind": "interpolation",
          "expr": "label"
        }
      ]
    }
  ],
  "meta": {
    "name": "Button",
    "variants": {
      "size": [
        "sm",
        "lg"
      ],
      "variant": [
        "default",
        "ghost"
      ]
    },
    "slots": [
      "button"
    ],
    "dependencies": [
      "clsx"
    ],
    "registryDependencies": [
      "utils"
    ]
  }
}
